# abbyy

./: CMakeLists.txt  main.cpp  task.cpp  task.h  taskscheduler.cpp  taskscheduler.h
